Changed ElectionDB to ElectionDBContext to make the purpose of the class clear

--- a/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/ExploreCalifornia.csproj
+++ b/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/ExploreCalifornia.csproj
@@ -165,7 +165,7 @@
     <Compile Include="Controllers\BookingController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TourController.cs" />
-    <Compile Include="DAL\ElectionDB.cs" />
+    <Compile Include="DAL\ElectionDBContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
