--- a/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/ExploreCalifornia.csproj
+++ b/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/ExploreCalifornia.csproj
@@ -161,30 +161,26 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
-    <Compile Include="Controllers\AdminsController.cs" />
-    <Compile Include="Controllers\BookingController.cs" />
+    <Compile Include="Controllers\CandidateProfilesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\TourController.cs" />
+    <Compile Include="DAL\CandidateProfileGateway.cs" />
+    <Compile Include="DAL\DataRUGateway.cs" />
     <Compile Include="DAL\ElectionDBContext.cs" />
+    <Compile Include="DAL\InterfaceDataRUGateway.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Admin.cs" />
-    <Compile Include="Models\Booking.cs" />
     <Compile Include="Models\Campaign.cs" />
     <Compile Include="Models\Candidate.cs" />
     <Compile Include="Models\CandidateProfile.cs" />
     <Compile Include="Models\Rallies.cs" />
-    <Compile Include="Models\Tour.cs" />
     <Compile Include="Models\Voter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="TableModule\CandidateProfileTableModule.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\ElectionDB.mdf" />
-    <Content Include="App_Data\ElectionDB_log.ldf">
-      <DependentUpon>ElectionDB.mdf</DependentUpon>
-    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\images\flag_photo.jpg" />
@@ -223,18 +219,15 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Tour\Index.cshtml" />
-    <Content Include="Views\Tour\Create.cshtml" />
-    <Content Include="Views\Booking\Create.cshtml" />
-    <Content Include="Views\Booking\Index.cshtml" />
-    <Content Include="Views\Tour\Confirm.cshtml" />
-    <Content Include="Views\Admins\Create.cshtml" />
-    <Content Include="Views\Admins\Delete.cshtml" />
-    <Content Include="Views\Admins\Details.cshtml" />
-    <Content Include="Views\Admins\Edit.cshtml" />
-    <Content Include="Views\Admins\Index.cshtml" />
+    <Content Include="Views\CandidateProfiles\Create.cshtml" />
+    <Content Include="Views\CandidateProfiles\Delete.cshtml" />
+    <Content Include="Views\CandidateProfiles\Details.cshtml" />
+    <Content Include="Views\CandidateProfiles\Edit.cshtml" />
+    <Content Include="Views\CandidateProfiles\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
