--- a/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/bin/ExploreCalifornia.dll.config
+++ b/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/bin/ExploreCalifornia.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="ElectionDB" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ElectionDB.mdf;Initial Catalog=ElectionDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ElectionDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ElectionDBContext.mdf;Initial Catalog=ElectionDBContext;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
