Added rallies controller and view

--- a/ProjectElection/ExploreCalifornia/ExploreCalifornia.csproj
+++ b/ProjectElection/ExploreCalifornia/ExploreCalifornia.csproj
@@ -163,6 +163,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\CandidateProfilesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\RalliesController.cs" />
     <Compile Include="Controllers\VotersController.cs" />
     <Compile Include="DAL\CandidateProfileGateway.cs" />
     <Compile Include="DAL\DataRUGateway.cs" />
@@ -222,6 +223,7 @@
     <Content Include="Views\Voters\Edit.cshtml" />
     <Content Include="Views\Voters\Index.cshtml" />
     <Content Include="Views\Voters\Login.cshtml" />
+    <Content Include="Views\Rallies\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
