--- a/ProjectElection/ExploreCalifornia/ExploreCalifornia.csproj
+++ b/ProjectElection/ExploreCalifornia/ExploreCalifornia.csproj
@@ -161,6 +161,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Controllers\CampaignController.cs" />
     <Compile Include="Controllers\CandidateProfilesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RalliesController.cs" />
@@ -224,6 +225,7 @@
     <Content Include="Views\Voters\Index.cshtml" />
     <Content Include="Views\Voters\Login.cshtml" />
     <Content Include="Views\Rallies\Index.cshtml" />
+    <Content Include="Views\Campaign\CampaignIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
