--- a/Team11_2106Project/Team11_2106Project.csproj
+++ b/Team11_2106Project/Team11_2106Project.csproj
@@ -197,21 +197,24 @@
     <Compile Include="Controllers\CandidateProfilesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Gateway\DataRUGateway.cs" />
-    <Compile Include="TableModule\HomeTM.cs" />
     <Compile Include="DBContext\ElectionDBContext.cs" />
     <Compile Include="Gateway\IDataRUGateway.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Admin.cs" />
-    <Compile Include="Models\Campaign.cs" />
-    <Compile Include="Models\Candidate.cs" />
-    <Compile Include="Models\CandidateProfile.cs" />
-    <Compile Include="Models\Rallies.cs" />
-    <Compile Include="Models\Voter.cs" />
+    <Compile Include="Migrations\201703310911299_init.cs" />
+    <Compile Include="Migrations\201703310911299_init.Designer.cs">
+      <DependentUpon>201703310911299_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="ViewModel\AdminViewModel.cs" />
+    <Compile Include="ViewModel\CampaignDateViewModel.cs" />
+    <Compile Include="ViewModel\CandidateViewModel.cs" />
+    <Compile Include="ViewModel\CandidateProfileViewModel.cs" />
+    <Compile Include="ViewModel\RalliesViewModel.cs" />
+    <Compile Include="ViewModel\VoterViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="TableModule\CandidateProfileTM.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\ElectionDBContext.mdf" />
@@ -270,6 +273,11 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201703310911299_init.resx">
+      <DependentUpon>201703310911299_init.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
