Included Campaign, ICampaign, Admin, Voter, Candidate, IVote, ILogIn<T> classes with its implementations

--- a/Team11_2106Project/Team11_2106Project.csproj
+++ b/Team11_2106Project/Team11_2106Project.csproj
@@ -196,10 +196,17 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\CandidateProfilesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Domain Model\CandidateProfile.cs" />
-    <Compile Include="Domain Model\ICandidateProfile.cs" />
-    <Compile Include="Domain Model\IRallies.cs" />
-    <Compile Include="Domain Model\Rallies.cs" />
+    <Compile Include="DomainModel\Admin.cs" />
+    <Compile Include="DomainModel\Campaign.cs" />
+    <Compile Include="DomainModel\Candidate.cs" />
+    <Compile Include="DomainModel\CandidateProfile.cs" />
+    <Compile Include="DomainModel\ICampaign.cs" />
+    <Compile Include="DomainModel\ICandidateProfile.cs" />
+    <Compile Include="DomainModel\ILogIn.cs" />
+    <Compile Include="DomainModel\IRallies.cs" />
+    <Compile Include="DomainModel\IVote.cs" />
+    <Compile Include="DomainModel\Rallies.cs" />
+    <Compile Include="DomainModel\Voter.cs" />
     <Compile Include="Gateway\DataGateway.cs" />
     <Compile Include="DBContext\ElectionDBContext.cs" />
     <Compile Include="Gateway\IDataGateway.cs" />
