--- a/Team11_2106Project/Team11_2106Project.csproj
+++ b/Team11_2106Project/Team11_2106Project.csproj
@@ -194,8 +194,11 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CandidateProfilesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\NavbarController.cs" />
+    <Compile Include="Controllers\VoteController.cs" />
     <Compile Include="DomainModel\Admin.cs" />
     <Compile Include="DomainModel\Campaign.cs" />
     <Compile Include="DomainModel\Candidate.cs" />
@@ -206,6 +209,7 @@
     <Compile Include="DomainModel\IRallies.cs" />
     <Compile Include="DomainModel\IVote.cs" />
     <Compile Include="DomainModel\Rallies.cs" />
+    <Compile Include="DomainModel\User.cs" />
     <Compile Include="DomainModel\Voter.cs" />
     <Compile Include="Gateway\DataGateway.cs" />
     <Compile Include="DBContext\ElectionDBContext.cs" />
@@ -222,7 +226,11 @@
     <Compile Include="ViewModel\CampaignDateViewModel.cs" />
     <Compile Include="ViewModel\CandidateViewModel.cs" />
     <Compile Include="ViewModel\CandidateProfileViewModel.cs" />
+    <Compile Include="ViewModel\Domain.cs" />
+    <Compile Include="ViewModel\Entities.cs" />
+    <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\RalliesViewModel.cs" />
+    <Compile Include="ViewModel\VoteModel.cs" />
     <Compile Include="ViewModel\VoterViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -237,6 +245,8 @@
     <Content Include="Content\images\logo.png" />
     <Content Include="Content\images\mission_look.jpg" />
     <Content Include="Content\images\voting.png" />
+    <Content Include="Content\navbar.css" />
+    <Content Include="Content\VoteControl.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -271,12 +281,18 @@
     <Content Include="Views\CandidateProfiles\Edit.cshtml" />
     <Content Include="Views\CandidateProfiles\Index.cshtml" />
     <Content Include="Views\CandidateProfiles\IndexWithComment.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Shared\_LayoutLogin.cshtml" />
+    <Content Include="Views\Shared\_Navbar.cshtml" />
+    <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Shared\VoteControl.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Views\Home\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
